# situational_graphs_reasoning

./: .gitignore  MANIFEST.in  README.md  batch-job-launcher.sh  dockerfile  mprocs.yaml  package.xml  setup.cfg  setup.py
config/: config.json  grapharm_training.json  pard_training.json  same_floor_training.json  same_room_training.json
config/GraphReasoning/: same_room_training.json  unfruitful_trials.json
config/SyntheticDataset/: graph_matching.json  graph_reasoning.json  multirobot.json
experiments_utils/: barplot_for_paper.py  compute_averages.py  generate_text_file_s_graphs.py
graph_reasoning/: CustomSquaredRoomDataset.py  GNNWrapper.py  SquaredRoomDatasetGenerator.py  SyntheticDatasetGenerator.py  dataset_visualizer_stack.py  from_networkxwrapper_2_heterodata.py  generate_floor_graphs.py  graph_reasoning_node.py  graph_reasoning_stack.py  graph_visualizer.py  main.py  synthdata_training_stack.py  train_room_clustering.py
graph_reasoning/GraphARM_from_Darmstadt/: diffusion_ordering_network.pt  test_grapharm.py  train_syntetic_ds.py
launch/: graph_reasoning.launch.py  situational_graphs_reasoning.launch.py
pths/: model_walls_best.pth
situational_graphs_reasoning/: GNNWrapper.py  from_networkxwrapper_2_heterodata.py  situational_graphs_reasoning_node.py  synthdata_training_stack.py  utils.py
src/graph_reasoning/: EvolvingSetsTracker.py  GNNWrapper.py  MetricsSubplot.py  from_networkxwrapper_2_heterodata.py  generation_gt_node.py  graph_reasoning_node.py  synthdata_inference_stack.py  synthdata_training_stack.py
src/graph_reasoning/GNNs/: EdgeDecoderMulticlass.py  GATConvCustHop.py  G_GNN.py
src/graph_reasoning/GNNs/v1/: GATConvCustHop.py  G_GNNv1.py
src/graph_reasoning/GNNs/v2/: EdgeAwareGatConv.py  EdgeDecoderMulticlass.py  G_GNNv2.py
src/graph_reasoning/GNNs/v3/: EdgeAwareGatConv.py  EdgeDecoderMulticlass.py  G_GNNv3.py  test.py
src/graph_reasoning/GraphARM_from_Darmstadt/: grapharm.py  models.py  test_models.py  utils.py
src/graph_reasoning/config/: __init__.py  grapharm_training.json  room_merge.json  same_RoomWall_best.json  same_RoomWall_best_v3.json  same_RoomWall_training.json  same_RoomWall_training3.json  same_RoomWall_training_OLD.json  same_RoomWall_training_v3.json  same_room_best.json  same_room_training.json  same_wall_training.json
src/graph_reasoning/pths/: __init__.py  model_RoomWall.pth  model_RoomWall_best.pth  model_RoomWall_best4.pth  model_RoomWall_best_v3.pth  model_rooms_best.pth
