<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>situational_graphs_reasoning</name>
  <version>0.0.1</version>
  <description>Graph reasoning for extracting semantic concepts using GNNs</description>
  <maintainer email="josmilrom@gmail.com">adminpc</maintainer>
  <license>GPLv3</license>

  <depend>python3-pytorch-pip</depend>
  <depend>python3-torch-geometric-pip</depend>
  <depend>python3-protobuf</depend>
  <depend>python3-networkx</depend>
  <depend>python3-numpy</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-colorama</depend>
  <depend>python3-shapely</depend>
  <depend>python3-seaborn</depend>
  <depend>situational_graphs_msgs</depend>
  <depend>situational_graphs_reasoning_msgs</depend>
  <depend>situational_graphs_datasets</depend>
  <depend>situational_graphs_wrapper</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
